2010-06-28  Alan McGovern  <amcgovern@novell.com>

	* frameworkelement.cpp: Elements which are not visible should
	  not be checked for any dirty flags. Prevents spurious
	  warnings about bailing out after 250 passes.

2010-06-28  Alan McGovern  <amcgovern@novell.com>

	* grid.h:
	* shape.h:
	* panel.h:
	* media.h:
	* glyphs.h:
	* border.h:
	* grid.cpp:
	* canvas.h:
	* textbox.h:
	* dirty.cpp:
	* media.cpp:
	* panel.cpp:
	* shape.cpp:
	* glyphs.cpp:
	* canvas.cpp:
	* border.cpp:
	* textbox.cpp:
	* uielement.h:
	* textblock.h:
	* usercontrol.h:
	* uielement.cpp:
	* richtextbox.h:
	* textblock.cpp:
	* mediaelement.h:
	* richtextbox.cpp:
	* usercontrol.cpp:
	* mediaelement.cpp:
	* frameworkelement.h:
	* frameworkelement.cpp: Add MoonError* parameters to our
	  measure/arrange/UpdateLayout functions to ensure that errors
	  are propagated correctly.

2010-06-25  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (DownloadTile): Optimization: pass the
	BitmapImageContext as the closure argument to the event handlers.
	(TileOpened): Now takes a BitmapImageContext argument so we no
	longer have to do a lookup.
	(TileFailed): Same.
	(GetBitmapImageContext): Removed as it is no longer needed.
	(StopDownloading): Don't leak the BitmapImageContexts.

2010-06-25  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (TileFailed): Only invalidate if we've given
	up on downloading the tile. Requeued attempts should not
	invalidate because nothing has changed visually.

	* region.cpp (Draw): Swapped count and i variables to make the
	code make more sense.

	* multiscaleimage.h: Renamed tile_available() to tile_opened() for
	consistency.

2010-06-25  Jeffrey Stedfast  <fejj@novell.com>

	* deepzoomimagetilesource.h: Renamed msi_cb to
	MultiScaleImageCallback.

	* multiscaleimage.cpp: Move GetTileFade() requests out of inner
	loops.

2010-06-25  Alan McGovern  <amcgovern@novell.com>

	* layoutinformation.h: For lack of a better place, store the