@@ -174,6 +174,7 @@ static struct MoonlightDebugOption debugs[] = {
 	{ "audio",             RUNTIME_DEBUG_AUDIO },
 	{ "buffering",         RUNTIME_DEBUG_BUFFERING },
 	{ "codecs",            RUNTIME_DEBUG_CODECS },
+	{ "curl",              RUNTIME_DEBUG_CURL },
 	{ "demuxers",          RUNTIME_DEBUG_DEMUXERS },
 	{ "dependencyobject",  RUNTIME_DEBUG_DP },
 	{ "deployment",        RUNTIME_DEBUG_DEPLOYMENT },
@@ -182,7 +183,6 @@ static struct MoonlightDebugOption debugs[] = {
 	{ "ffmpeg",            RUNTIME_DEBUG_FFMPEG },
 	{ "font",              RUNTIME_DEBUG_FONT },
 	{ "framereaderloop",   RUNTIME_DEBUG_FRAMEREADERLOOP },
-	{ "httpstreaming",     RUNTIME_DEBUG_HTTPSTREAMING },
 	{ "layout",            RUNTIME_DEBUG_LAYOUT },
 	{ "markers",           RUNTIME_DEBUG_MARKERS },
 	{ "media",             RUNTIME_DEBUG_MEDIA },
